--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
         'https://www.nalog.gov.ru/': { number_of_requests: 0, number_of_errored_responses: 0 }, 
         'https://customs.gov.ru/': { number_of_requests: 0, number_of_errored_responses: 0 }, 
         'https://pfr.gov.ru/': { number_of_requests: 0, number_of_errored_responses: 0 }, 
-        'https://rkn.gov.ru/': { number_of_requests: 0, number_of_errored_responses: 0 }
+        'https://rkn.gov.ru/': { number_of_requests: 0, number_of_errored_responses: 0 },
+        'https://mail.rkn.gov.ru/' : { number_of_requests: 0, number_of_errored_responses: 0 },
+        'https://cloud.rkn.gov.ru' : { number_of_requests: 0, number_of_errored_responses: 0 },
+        'https://mvd.gov.ru' : { number_of_requests: 0, number_of_errored_responses: 0 },
+        'https://pwd.wto.economy.gov.ru/' : { number_of_requests: 0, number_of_errored_responses: 0 }, 
+        'https://stroi.gov.ru/' : { number_of_requests: 0, number_of_errored_responses: 0 },
+        'https://proverki.gov.ru/' : { number_of_requests: 0, number_of_errored_responses: 0 }
     }  
     var statsEl = document.getElementById('stats');
     function printStats() {
